2025-06-06
  MiG-21MF
    - Update textures, thanks Odyseus
2025-06-05
  MiG-21MF
    - Re-order pylons
    - Update model and texture
  O-1 Bird Dog
    - Restore working propeller
2025-05-22
  Knox class Destroyer Escorts
    - Fix distance lods for Knox
    - Fix lods definition for Kirk, Gray
  H-2 Seasprite 
    - New engine definition, kudos Admiral
2025-05-21
  Forrest Sherman DDs, Knox DEs
    - Add connector to remove dcs.log entry
    - Remove split normals, better smoothing on model
  Knox DEs
    - Add distance lods for 1km, 5km and 10km
2025-05-20
  CVA-31 Bon Homme Richard
    - Cleanup liveries, kudos western_JPN
  Knox class Destroyer Escorts
    - Update READMEs
2025-05-19
  BB-62 New Jersey
    - Add new house to deck, probably for refuel helo
    - Process model surface differently, new textures
2025-05-18
  Destroyers
    - Change Oerlikon 20mm params
  USS Kirk
    - Fix hangar
  H-2 Seasprite 
    - Revert to 1.0.0 version, restore old edm  
2025-05-15
  H-2 Seasprite
    - Use new bounding box
  F-8, MiG-17 refactoring, kudos Hawkeye
    - Remove flyable files
    - Restructure textures of Mig-17F
  MiG-21MF "Fishbed-J"
    - Add DisplayNameShort
    - Fix fire positions
  USS Bigelow
    - Add replenishment post to 1st & 3rd turret of Bigelow
    - Bigelow's Front & rear mast modification
    - Add port side DESRON 19 insignia to USS Turner Joy
  USS Maddox TI
    - Add Gulf of Tonkin incident version USS Maddox
2025-05-13
  MiG-21MF "Fishbed-J"
    - Shadow on rudder fixed once more
    - Inverted normals on right wheel box
2025-05-12
  USS Fletcher FRAM II
    - Revert to version 1.0.0
  MiG-21MF "Fishbed-J"
    - Shadow on rudder fixed
    - Lower wing shadows fixed
    - Nose wheel now touches ground
    - Added 5th pylon, thanks Sinzov
    - Added bort numbers (3 digits)
2025-05-11
  buildings
    - Change names from VVW to VWV Prefix
  MiG-17F, F-8 Crusader
    - Move READMEs out of livery folder
2025-05-09
  USS Knox, Gary, Kirk